// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AutoZero (stock) regression guard probeType=Auto emits stable G-code for XY 1`] = `
[
  "; AZ Probe XY Auto",
  "%X_OFF = 22.5",
  "%Y_OFF = 22.5",
  "%PROBE_DELAY=0.05",
  "%PROBE_MOVE_FEED=0",
  "G21 G91",
  "G38.2 Z-25 F200",
  "G21 G91 G0 Z3",
  "G21 G91 G0 X-13",
  "G38.2 X-30 F150",
  "G21 G91 G0 X2",
  "G38.2 X-5 F75",
  "G4 P[PROBE_DELAY]",
  "G10 L20 P0 X0",
  "G21 G91 G0 X26",
  "G38.2 X30 F150",
  "G21 G91 G0 X-2",
  "G38.2 X5 F75",
  "G4 P[PROBE_DELAY]",
  " G10 L20 P0 X[posx/2]",
  " G90 G0 X0",
  "G21 G91 G0 Y-13",
  "G38.2 Y-30 F150",
  "G21 G91 G0 Y2",
  "G38.2 Y-5 F75",
  "G4 P[PROBE_DELAY]",
  "G10 L20 P0 Y0",
  "G21 G91 G0 Y26",
  "G38.2 Y30 F150",
  "G21 G91 G0 Y-2",
  "G38.2 Y5 F75",
  "G4 P[PROBE_DELAY]",
  " G10 L20 P0 Y[posy/2]",
  "G21 G90 G0 X0 Y0",
  "G4 P[PROBE_DELAY]",
  "G21 G10 L20 P0 X[X_OFF] Y[Y_OFF]",
  "G21 G90 G0 X0 Y0",
]
`;

exports[`AutoZero (stock) regression guard probeType=Auto emits stable G-code for XYZ 1`] = `
[
  "; AZ Probe XYZ Auto - direction: 0",
  "%X_OFF = 22.5",
  "%Y_OFF = 22.5",
  "%Z_THICKNESS = 5",
  "%PROBE_DELAY=0.05",
  "%PROBE_MOVE_FEED=0",
  "G21 G91",
  "G38.2 Z-25 F200",
  "G21 G91 G0 Z2",
  "G38.2 Z-5 F75",
  "G4 P[PROBE_DELAY]",
  "G10 L20 P0 Z[Z_THICKNESS]",
  "G4 P[PROBE_DELAY]",
  "G21 G91 G0 Z3",
  "G21 G91 G0 X-13",
  "G38.2 X-30 F150",
  "G21 G91 G0 X2",
  "G38.2 X-5 F75",
  "G4 P[PROBE_DELAY]",
  "%X_LEFT=posx",
  "G21 G91 G0 X26",
  "G38.2 X30 F150",
  "G21 G91 G0 X-2",
  "G38.2 X5 F75",
  "G4 P[PROBE_DELAY]",
  "%X_RIGHT=posx",
  "%X_CENTER=((X_RIGHT - X_LEFT)/2)*-1",
  " G91 G0 X[X_CENTER]",
  "G21 G91 G0 Y-13",
  "G38.2 Y-30 F250",
  "G21 G91 G0 Y2",
  "G38.2 Y-5 F75",
  "G4 P[PROBE_DELAY]",
  "%Y_BOTTOM = posy",
  "G21 G91 G0 Y26",
  "G38.2 Y30 F250",
  "G21 G91 G0 Y-2",
  "G38.2 Y5 F75",
  "G4 P[PROBE_DELAY]",
  "%Y_TOP = posy",
  "%Y_CENTER = ((Y_TOP - Y_BOTTOM)/2) * -1",
  " G0 Y[Y_CENTER]",
  "G21 G10 L20 P0 X[X_OFF] Y[Y_OFF]",
  "G21 G90 G0 X0 Y0",
  "G21 G0 G90 Z1",
]
`;

exports[`AutoZero (stock) regression guard probeType=Auto emits stable G-code for Z only 1`] = `
[
  "; AZ Probe Z Auto",
  "%Z_THICKNESS = 5",
  "%PROBE_DELAY=0.05",
  "G21 G91",
  "G38.2 Z-25 F200",
  "G21 G91 G0 Z2",
  "G38.2 Z-5 F75",
  "G4 P[PROBE_DELAY]",
  "G10 L20 P0 Z[Z_THICKNESS]",
  "G4 P[PROBE_DELAY]",
  "G21 G91 G0 Z1",
]
`;

exports[`AutoZero (stock) regression guard probeType=Diameter emits stable G-code for XY 1`] = `
[
  "; AZ Probe XY specific dia",
  "%X_OFF = 22.5",
  "%Y_OFF = 22.5",
  "%PROBE_DELAY=0.05",
  "%PROBE_MOVE_FEED=0",
  "G21 G91",
  "G38.2 Z-25 F200",
  "G21 G91 G0 Z3",
  "G21 G91 G0 X13",
  "G38.2 X20 F250",
  "G21 G91 G0 X-2",
  "G38.2 X5 F75",
  "G4 P[PROBE_DELAY]",
  "G21 G10 L20 P0 X19.325",
  "G21 G90 G0 X0",
  "G21 G91 G0 Y13",
  "G38.2 Y20 F250",
  "G21 G91 G0 Y-2",
  "G38.2 Y5 F75",
  "G4 P[PROBE_DELAY]",
  "G21 G10 L20 P0 Y19.325",
  "G21 G90 G0 X0 Y0",
  "G4 P[PROBE_DELAY]",
  "G21 G10 L20 P0 X[X_OFF] Y[Y_OFF]",
  "G4 P[PROBE_DELAY]",
  "G21 G90 G0 X0 Y0",
]
`;

exports[`AutoZero (stock) regression guard probeType=Diameter emits stable G-code for XYZ 1`] = `
[
  "; AZ Probe XYZ specific dia",
  "%X_OFF = 22.5",
  "%Y_OFF = 22.5",
  "%Z_THICKNESS = 5",
  "%PROBE_DELAY=0.05",
  "%PROBE_MOVE_FEED=0",
  "G21 G91",
  "G38.2 Z-25 F200",
  "G21 G91 G0 Z2",
  "G38.2 Z-5 F75",
  "G4 P[PROBE_DELAY]",
  "G10 L20 P0 Z[Z_THICKNESS]",
  "G4 P[PROBE_DELAY]",
  "G21 G91 G0 Z3",
  "G21 G91 G0 X13",
  "G38.2 X20 F250",
  "G21 G91 G0 X-2",
  "G38.2 X5 F75",
  "G4 P[PROBE_DELAY]",
  "G21 G10 L20 P0 X19.325",
  "G21 G90 G0 X0",
  "G21 G91 G0 Y13",
  "G38.2 Y20 F250",
  "G21 G91 G0 Y-2",
  "G38.2 Y5 F75",
  "G4 P[PROBE_DELAY]",
  "G21 G10 L20 P0 Y19.325",
  "G21 G90 G0 X0 Y0",
  "G4 P[PROBE_DELAY]",
  "G21 G10 L20 P0 X[X_OFF] Y[Y_OFF]",
  "G21 G90 G0 X0 Y0",
  "G21 G90 G0 Z1",
]
`;

exports[`AutoZero (stock) regression guard probeType=Diameter emits stable G-code for Z only 1`] = `
[
  "; AZ Probe Z specific dia",
  "%Z_THICKNESS = 5",
  "%PROBE_DELAY=0.05",
  "G21 G91",
  "G38.2 Z-25 F200",
  "G21 G91 G0 Z2",
  "G38.2 Z-5 F75",
  "G4 P[PROBE_DELAY]",
  "G10 L20 P0 Z[Z_THICKNESS]",
  "G4 P[PROBE_DELAY]",
  "G21 G91 G0 Z1",
]
`;

exports[`AutoZero (stock) regression guard probeType=Tip emits stable G-code for XY 1`] = `
[
  "; AZ Probe XY Tip",
  "%X_OFF = 22.5",
  "%Y_OFF = 22.5",
  "%PROBE_DELAY=0.05",
  "%PROBE_MOVE_FEED=0",
  "G21 G91",
  "G38.2 Z-25 F200",
  "G21 G91 G0 Z0.5",
  "G21 G91 G0 X-3",
  "G38.2 X-30 F150",
  "G21 G91 G0 X2",
  "G38.2 X-5 F75",
  "G4 P[PROBE_DELAY]",
  "G10 L20 P0 X0",
  "G21 G91 G0 X14",
  "G38.2 X15 F150",
  "G21 G91 G0 X-2",
  "G38.2 X5 F75",
  "G4 P[PROBE_DELAY]",
  " G10 L20 P0 X[posx/2]",
  " G90 G0 X0",
  "G21 G91 G0 Y-3",
  "G38.2 Y-15 F150",
  "G21 G91 G0 Y2",
  "G38.2 Y-5 F75",
  "G4 P[PROBE_DELAY]",
  "G10 L20 P0 Y0",
  "G21 G91 G0 Y14",
  "G38.2 Y15 F150",
  "G21 G91 G0 Y-2",
  "G38.2 Y5 F75",
  "G4 P[PROBE_DELAY]",
  " G10 L20 P0 Y[posy/2]",
  " G90 G0 X0 Y0",
  "G4 P[PROBE_DELAY]",
  "G21 G10 L20 P0 X[X_OFF] Y[Y_OFF]",
  "G21 G90 G0 X0 Y0",
]
`;

exports[`AutoZero (stock) regression guard probeType=Tip emits stable G-code for XYZ 1`] = `
[
  "; AZ Probe XYZ Tip",
  "%X_OFF = 22.5",
  "%Y_OFF = 22.5",
  "%Z_THICKNESS = 5",
  "%PROBE_DELAY=0.05",
  "%PROBE_MOVE_FEED=0",
  "G21 G91",
  "G38.2 Z-25 F200",
  "G21 G91 G0 Z2",
  "G38.2 Z-5 F75",
  "G4 P[PROBE_DELAY]",
  "G10 L20 P0 Z[Z_THICKNESS]",
  "G4 P[PROBE_DELAY]",
  "G21 G91 G0 Z0.5",
  "G21 G91 G0 X-3",
  "G38.2 X-30 F150",
  "G21 G91 G0 X2",
  "G38.2 X-5 F75",
  "G4 P[PROBE_DELAY]",
  "%X_LEFT=posx",
  "G21 G91 G0 X14",
  "G38.2 X15 F150",
  "G21 G91 G0 X-2",
  "G38.2 X5 F75",
  "G4 P[PROBE_DELAY]",
  "%X_RIGHT=posx",
  "%X_CENTER=((X_RIGHT - X_LEFT)/2)*-1",
  " G91 G0 X[X_CENTER]",
  "G21 G91 G0 Y-3",
  "G38.2 Y-15 F150",
  "G21 G91 G0 Y2",
  "G38.2 Y-5 F75",
  "G4 P[PROBE_DELAY]",
  "%Y_BOTTOM = posy",
  "G21 G91 G0 Y14",
  "G38.2 Y15 F150",
  "G21 G91 G0 Y-2",
  "G38.2 Y5 F75",
  "G4 P[PROBE_DELAY]",
  "%Y_TOP = posy",
  "%Y_CENTER = ((Y_TOP - Y_BOTTOM)/2) * -1",
  " G0 Y[Y_CENTER]",
  "G21 G10 L20 P0 X[X_OFF] Y[Y_OFF]",
  "G21 G90 G0 X0 Y0",
  "G21 G0 G90 Z1",
]
`;

exports[`AutoZero (stock) regression guard probeType=Tip emits stable G-code for Z only 1`] = `
[
  "; AZ Probe Z Tip",
  "%Z_THICKNESS = 5",
  "%PROBE_DELAY=0.05",
  "G21 G91",
  "G38.2 Z-25 F200",
  "G21 G91 G0 Z2",
  "G38.2 Z-5 F75",
  "G4 P[PROBE_DELAY]",
  "G10 L20 P0 Z[Z_THICKNESS]",
  "G4 P[PROBE_DELAY]",
  "G21 G91 G0 Z1",
]
`;
